@@ -1,3 +1,8 @@
+2003-04-21  Markus Germeier  <mager@tzi.de>
+
+	* libmpio/id3.c (mpio_id3_copy_tag): 
+	  remove trailing spaces as suggested by Thomas
+
 2003-04-20  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/directory.c (mpio_dentry_filename_write): 
